# ffbins-rs

./: .gitignore  Cargo.toml  README.md  makefile
examples/: base.rs
src/: download.rs  extract.rs  lib.rs  sources.rs  utils.rs
