[package]
name = "ffbins-rs"
links = "ffbins-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.6"

serde_json = { version = "1.0.128" }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = { version = "2.0.17", features = [] }

tar = "0.4.43"
xz2 = "0.1.5"
zip = { version = "7.0.0", default-features =  false, features = [ "deflate" ] }
sevenz-rust = "0.6.1"

reqwest = { version = "0.13.1", features = ["json", "blocking"] }

[[example]]
name = "base"
path = "examples/base.rs"