[package]
name = "ffbins-rs"
links = "ffbins-rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = { version = "1.0.102" }
dirs = { version = "6.0.0" }

[dependencies]
serde_json = { version = "1.0.128" }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = { version = "2.0.17", features = [] }

which = "8.0.1"
sevenz-rust2 = "0.20.2"
reqwest = { version = "0.13.2", features = ["stream", "blocking"] }

[[example]]
name = "base"
path = "examples/base.rs"